--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8000
-MONGO_URL=mongodb://127.0.0.1/FoodI
+# MONGO_URL=mongodb://127.0.0.1/FoodI
+MONGO_URL=mongodb+srv://ms7500746:NeTAHgmBQt8V9sY6@cluster0.ikezuml.mongodb.net/foodi?retryWrites=true&w=majority
