--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8000
 # MONGO_URL=mongodb://127.0.0.1/FoodI
-MONGO_URL=mongodb+srv://ms7500746:NeTAHgmBQt8V9sY6@cluster0.ikezuml.mongodb.net/foodi?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://ms7500746:AKm5o2tZP1mRMdci@foodi-app.7unntu4.mongodb.net/foodi-app?retryWrites=true&w=majority
+
+
+
